--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/bootstrap-5/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="bootstrap-5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <script
       src="https://kit.fontawesome.com/f3b249ae54.js"
       crossorigin="anonymous"
